[package]
name = "haybale-mex"
version = "0.7.2"
authors = ["Craig Disselkoen <craigdissel@gmail.com>"]
edition = "2018"
description = "Symbolic execution of LLVM IR, written in Rust"
documentation = "https://docs.rs/haybale"
repository = "https://github.com/PLSysSec/haybale"
readme = "README.md"
keywords = ["symbolic", "llvm", "IR", "SMT"]
license = "MIT"
include = ["src/mex-tool/mex.rs", "src/lib.rs"]
[dependencies]
llvm-sys = {version = "170", features = ["force-dynamic"]}
llvm-ir = {version = "0.11.0", features = ["llvm-17","llvm-11-or-greater"]}

boolector = {version = "0.4.3", features = ["vendor-lgl"]}
either = "1.9"
itertools = "0.11"
reduce = "0.1"
cpp_demangle = "0.2"
rustc-demangle = "0.1"
log = "0.4.20"
rustversion = "1.0"

[dev-dependencies]
env_logger = "0.10"

[features]

[lib]
name = "haybale"
path = "src/haybale/lib.rs"

[[bin]]
name = "mex"           # The name of the target.
path = "src/mex/main.rs"    # The source file of the target.

[package.metadata.docs.rs]
# Generate docs.rs documentation with the llvm-10 feature
features = ["llvm-17"]
